# food-waste-reduction

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: build-api.yml  build-vision.yml  ci.yml  deploy-staging.yml
apps/api/: Dockerfile  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_staff_metrics_snapshots.py  0003_reward_type_and_value_window.py  0004_restaurant_theme.py  0005_image_retention_days.py  0006_plate_capture_key_nullable.py  0007_labeled_sessions.py  0008_menu_extractions.py  0009_kitchen_ack.py  0010_bills_and_gst.py  0011_cancel_and_gst_toggle.py  0012_cancel_audit_columns.py  0013_bug_reports.py  0014_qr_tokens.py  0015_google_sub.py  0016_walkin_orders.py  0017_takeaway_sessions.py  0018_restaurant_tables.py  0019_reward_value_override.py  0020_backfill_qr_customer_email.py  0021_waitlist_entries.py
apps/api/app/: __init__.py  celery_app.py  config.py  errors.py  logging.py  main.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  bill.py  bug_report.py  consumption_score.py  dispute.py  fraud_signal.py  labeled_session.py  meal_session.py  menu_extraction.py  menu_item.py  plate_capture.py  qr_token.py  restaurant.py  restaurant_table.py  reward.py  staff_metrics.py  staff_validation.py  user.py  waitlist_entry.py
apps/api/app/routers/: auth.py  bills.py  bills_dashboard.py  dashboard.py  onboarding.py  platform.py  public.py  qr_tokens.py  restaurant_tables.py  restaurants.py  rewards.py  sessions.py  validations.py  waitlist.py
apps/api/app/schemas/: auth.py  bill.py  bug_report.py  onboarding.py  restaurant.py  session.py  validation.py
apps/api/app/scripts/: export_to_label_studio.py  import_labels_from_ls.py  seed.py
apps/api/app/services/: billing.py  cache.py  email.py  fraud.py  google_auth.py  msg91.py  nonce.py  otp.py  phash.py  rate_limit.py  sms.py  storage.py  sustainability.py  sustainability_report.py
apps/api/app/tasks/: anomaly.py  deliver_bill.py  deliver_dispute_email.py  deliver_reset_email.py  image_retention.py  scoring.py  staff_metrics.py
apps/api/app/vision/: anthropic_client.py  prompts.py  service_client.py
apps/api/scripts/: generate_qr_batch.py
apps/api/tests/: conftest.py  test_admin_endpoints.py  test_analytics_dashboard.py  test_analytics_endpoint.py  test_anomaly.py  test_auth_endpoints.py  test_bill_config.py  test_bill_delivery.py  test_billing.py  test_bills_export.py  test_cancel_and_gst_toggle.py  test_dashboard_badges.py  test_dispute_email.py  test_dispute_endpoints.py  test_google_signin.py  test_health.py  test_image_retention.py  test_kitchen_orders.py  test_label_studio_pipeline.py  test_menu_editing.py  test_menu_extraction.py  test_msg91.py  test_onboard_endpoint.py  test_phash.py  test_platform_admin.py  test_public_stats_endpoint.py  test_qr_tokens.py  test_restaurant_tables.py  test_restaurants_endpoints.py  test_reward_value_override.py  test_reward_window.py  test_rewards_endpoints.py  test_sessions_endpoints.py  test_sms_anonymous_mode.py  test_staff_metrics.py  test_staff_metrics_endpoint.py  test_sustainability.py  test_sustainability_report_pdf.py  test_validations_endpoints.py  test_vision_service_client.py  (+2 more)
apps/dashboard/: .eslintrc.json  index.html  package.json  tailwind.config.js
apps/dashboard/scripts/: lint-copy.ts
apps/dashboard/src/: App.tsx  index.css  main.tsx
apps/dashboard/src/components/: BillSendModal.tsx  BillViewModal.tsx  CancelOrderModal.tsx  ChannelStrip.tsx  EditItemsModal.tsx  LoyaltyBadge.tsx  OrderDetailDrawer.tsx  ScanMenuModal.tsx  StatePill.tsx  TakeawayPill.tsx  Toasts.tsx  VoidOrderModal.tsx
apps/dashboard/src/lib/: api.ts  auth.ts  chime.ts  copy-lint.ts  i18n.ts  notStaff.ts  theme.ts  toasts.ts  user.ts  validationDrafts.ts
apps/dashboard/src/locales/: en.json  hi.json  mr.json
apps/dashboard/src/screens/: AdminOnboard.tsx  Analytics.tsx  Bills.tsx  BugReport.tsx  DisputeDetail.tsx  Disputes.tsx  ForgotPassword.tsx  Login.tsx  Menu.tsx  NewWalkinOrder.tsx  NotStaffOfRestaurant.tsx  Onboard.tsx  Orders.tsx  PastOrders.tsx  PlatformCommandCenter.tsx  PlatformQrTokens.tsx  QrPrintSheet.tsx  Redeem.tsx  Rewards.tsx  Settings.tsx  SettingsStaff.tsx  SettingsTables.tsx  StaffMetrics.tsx  Summary.tsx  ValidationDetail.tsx  ValidationQueue.tsx  Waitlist.tsx  WaitlistPrintSheet.tsx
apps/labs/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/labs/src/: App.tsx  index.css
apps/marketing/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/marketing/src/: App.tsx  index.css
apps/web/: .env.example  .eslintrc.json  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/scripts/: lint-copy.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Capture.tsx  ChooseRewardType.tsx  GetBillModal.tsx  LangToggle.tsx  (+2 more)
infra/docker/: docker-compose.yml
scripts/: dev.sh  disk-report.sh
services/vision/: Dockerfile  README.md  package.json  pyproject.toml
services/vision/app/: __init__.py  config.py  fetch.py  main.py  schemas.py
services/vision/app/backends/: __init__.py  anthropic.py  base.py  factory.py  stub.py  yolo.py
services/vision/labeling/: README.md  config.xml
services/vision/tests/: conftest.py  test_infer.py  test_yolo_backend.py
(+29 files in other folders)
