[project]
name = "plate-clean-api"
version = "0.1.0"
description = "Plate-Clean Rewards FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # bcrypt >=4.1 breaks passlib 1.7.4's internal version probe. Pin until passlib
    # ships a fix; see https://github.com/pyca/bcrypt/issues/684
    "bcrypt<4.1",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "Pillow>=10.4.0",
    "imagehash>=4.3.1",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",
    "email-validator>=2.2.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-python-jose",
    "types-passlib",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "T20"]
ignore = [
    "S101",  # asserts ok in tests
    "B008",  # FastAPI Depends pattern
    "N818",  # custom exceptions named after the domain condition, not Error-suffixed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107", "N814", "S608"]  # passwords + import aliases + interpolated test cleanup SQL ok in tests
"app/scripts/seed.py" = ["T20", "S105", "S106"]
"app/security.py" = ["N806"]  # haversine's R is a standard constant name

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-ra --strict-markers"
