[project]
name = "plate-clean-vision"
version = "0.1.0"
description = "Standalone vision-inference microservice for Plate-Clean Rewards."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "Pillow>=10.4.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
# Phase 2 production extras — install separately on the GPU node when the
# YOLO backend is ready. Kept out of the base set so dev installs are cheap.
yolo = [
    "torch>=2.4.0",
    "ultralytics>=8.3.0",
    "onnxruntime>=1.19.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "T20"]
ignore = ["S101", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107", "N814"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
